// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Primary Button > should render button of color blue 1`] = `
<button
  class="bgm-button bgm-button--primary bgm-button--color-blue"
>
  hello world
</button>
`;

exports[`Primary Button > should render button of color gray 1`] = `
<button
  class="bgm-button bgm-button--primary bgm-button--color-gray"
>
  hello world
</button>
`;

exports[`Primary Button > should render button of size large 1`] = `
<button
  class="bgm-button bgm-button--primary"
>
  hello world
</button>
`;

exports[`Primary Button > should render button of size medium 1`] = `
<button
  class="bgm-button bgm-button--primary bgm-button--size-medium"
>
  hello world
</button>
`;

exports[`Primary Button > should render button of size small 1`] = `
<button
  class="bgm-button bgm-button--primary bgm-button--size-small"
>
  hello world
</button>
`;

exports[`Secondary Button > should render button of color blue 1`] = `
<button
  class="bgm-button bgm-button--secondary bgm-button--color-blue"
>
  hello world
</button>
`;

exports[`Secondary Button > should render button of size large 1`] = `
<button
  class="bgm-button bgm-button--secondary"
>
  hello world
</button>
`;

exports[`Secondary Button > should render button of size medium 1`] = `
<button
  class="bgm-button bgm-button--secondary bgm-button--size-medium"
>
  hello world
</button>
`;

exports[`Secondary Button > should render button of size small 1`] = `
<button
  class="bgm-button bgm-button--secondary bgm-button--size-small"
>
  hello world
</button>
`;

exports[`Text Button > should render button of size large 1`] = `
<button
  class="bgm-button bgm-button--text"
>
  hello world
</button>
`;

exports[`Text Button > should render button of size medium 1`] = `
<button
  class="bgm-button bgm-button--text bgm-button--size-medium"
>
  hello world
</button>
`;

exports[`Text Button > should render button of size small 1`] = `
<button
  class="bgm-button bgm-button--text bgm-button--size-small"
>
  hello world
</button>
`;

exports[`should render button link 1`] = `
<a
  class="bgm-button bgm-button--link bgm-button--primary"
  href="https://bgm.tv"
>
  Bangumi
</a>
`;

exports[`should render button of shape rounded 1`] = `
<button
  class="bgm-button bgm-button--primary"
>
  hello world
</button>
`;

exports[`should render button of shape square 1`] = `
<button
  class="bgm-button bgm-button--primary bgm-button--shape-square"
>
  hello world
</button>
`;

exports[`should render plain button 1`] = `
<a
  class="bgm-button bgm-button--link bgm-button--plain"
  href="https://bgm.tv"
>
  Bangumi
</a>
`;
